Move product options to bulk select mode and own button group partial for button group bulk deletion methods in frontend and backend
